2007-01-01 Harri Pitkänen <hatapitk@iki.fi>

	* Accept optional hyphens as in "syys-ilta" and "syy-silta".

2006-12-31 Harri Pitkänen <hatapitk@iki.fi>

	* Clean up suggestion code.
	* Add new option VOIKKO_OPT_OCR_SUGGESTIONS for OCR optimised spelling
	  suggestions.
	* Increase version numbers.

2006-12-30 Harri Pitkänen <hatapitk@iki.fi>

	* Do not suggest splitting word immediately before or after a
	  hyphen. Move word splitting suggestions to lower priority.
	* Check the cost parameter within individual suggestion functions,
	  not just between the functions.

2006-12-09 Harri Pitkänen <hatapitk@iki.fi>

        * Fix character case check for words with punctuation.

2006-12-07 Harri Pitkänen <hatapitk@iki.fi>

	* Disable voikkohyphenate on Windows by making it print out an error
	  about unsupported operating system. This is because it is questionable
	  whether linking against msvcp60.dll is allowed by the GPL and no other
	  library that I know of provides mbrlen on Windows.

2006-12-05 Harri Pitkänen <hatapitk@iki.fi>

	* Make libiconv optional on Windows. If it is not available,
	  only conversion to/from UTF-8 and CP850 is possible.

2006-12-01 Harri Pitkänen <hatapitk@iki.fi>

	* Support all modes of dictionary selection in Windows.

2006-11-30 Harri Pitkänen <hatapitk@iki.fi>

	* Refactoring in voikko_setup.c to prepare for better Windows
	  support.

2006-11-16 Harri Pitkänen <hatapitk@iki.fi>

        * Support parallel installations of Automake versions
          1.9 and 1.10. Both seem to work, but default will still
          be 1.9.

2006-11-11 Harri Pitkänen  <hatapitk@iki.fi>

	* Use iconv charset "UCS-2-INTERNAL" instead of "WCHAR_T" on Windows,
	  because not every version of libiconv supports WCHAR_T.
	* Fixes to configure.ac and src/Makefile.am to better support linking
	  against shared libraries on Windows.

2006-10-27 Harri Pitkänen  <hatapitk@iki.fi>

	* Implement version checking for malaga project files.
