@@ -1,6 +1,7 @@
 2007-01-01 Harri Pitkänen <hatapitk@iki.fi>
 
 	* Accept optional hyphens as in "syys-ilta" and "syy-silta".
+	* Accept optional hyphens as in "pop-opisto".
 
 2006-12-31 Harri Pitkänen <hatapitk@iki.fi>
 
